// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CountryPedia context Reducer should clear state 1`] = `
Object {
  "countries": null,
  "countryId": "",
  "currencies": null,
  "languages": null,
  "regions": null,
  "title": "CountryPedia",
}
`;

exports[`CountryPedia context Reducer should set countryId 1`] = `
Object {
  "countries": null,
  "countryId": "Peru",
  "currencies": null,
  "languages": null,
  "regions": null,
  "title": "CountryPedia",
}
`;

exports[`CountryPedia context Reducer should throw error if dispatch invalid action type 1`] = `[Error: Unknown countryPedia action type: fakeActionType]`;
